syntax = "proto3";

option csharp_namespace = "Ride.Infrastructure.Protos";

package ride;

// gRPC service exposed by Ride Service.
// Called by Booking Service to check availability and reserve seats.
service RideGrpc {
  // Returns ride information
  rpc GetRideInfo (GetRideInfoRequest) returns (RideInfoResponse);
  
  // Checks seat availability
  rpc CheckAvailability (CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
  
  // Reserves seats on a ride
  rpc ReserveSeats (ReserveSeatsRequest) returns (ReserveSeatsResponse);
  
  // Releases previously reserved seats
  rpc ReleaseSeats (ReleaseSeatsRequest) returns (ReleaseSeatsResponse);
}

message GetRideInfoRequest {
  string ride_id = 1;
}

message RideInfoResponse {
  string ride_id = 1;
  string driver_id = 2;
  string origin = 3;
  string destination = 4;
  string departure_time = 5;
  int32 available_seats = 6;
  double price_per_seat = 7;
  string currency = 8;
  bool is_available = 9;
  bool auto_confirm_bookings = 10;
}

message CheckAvailabilityRequest {
  string ride_id = 1;
  int32 seats_requested = 2;
}

message CheckAvailabilityResponse {
  bool is_available = 1;
  int32 available_seats = 2;
}

message ReserveSeatsRequest {
  string ride_id = 1;
  int32 seats_count = 2;
}

message ReserveSeatsResponse {
  bool success = 1;
  string message = 2;
}

message ReleaseSeatsRequest {
  string ride_id = 1;
  int32 seats_count = 2;
}

message ReleaseSeatsResponse {
  bool success = 1;
  string message = 2;
}
